Tue Mar 15 13:14:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_other_tests.lst:
          Removed Two_Objects tests, it is already in the orb core test
          list, no need to run it twice

Mon Mar 14 16:32:08 2005  Boris Kolpackov  <boris@kolpackov.net>

	* protocols/ace/RMCast/Socket.h:
	* protocols/ace/RMCast/Socket.cpp: Added support for querying
	incoming message size.

	* examples/RMCast/Send_Msg/Receiver.cpp: Added a check that
	discards messages of a wrong size before reading them.

Mon Mar 14 16:13:13 (IST) 2005  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* bin/tao_orb_tests.lst:

	  Added the Hang_Shutdown test to the daily builds.

Mon Mar  14 10:07:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * include/makeinclude/platform_vxworks5.5.x.GNU:
	  Fixed cleanup target for VxWorks builds.

Sat Mar  12 13:30:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_other_tests.lst:
          Removed SANDBOX for the ImplRepo NameService test, I see no reason
          why we just can't run it. Only in a minimum build we can't run it

Fri Mar 11 18:21:49 2005 Steve Huston  <shuston@riverace.com>

	* configure.ac: When checking for std namespace, decide which
	  iostream file to include based on ACE_USES_OLD_IOSTREAMS. On
	  systems that offer both iostream and iostream.h, including
	  iostream.h will hide the std stuff even though it's available.

Fri Mar 11 18:15:18 2005  Steve Huston  <shuston@riverace.com>

	* m4/compiler.m4: Remove the hard-coded addition of -library=iostream.
	  This uses old iostreams. Not sure why this was here, since the
	  regular GNU build doesn't turn it on.

	* ace/OS_Memory.h: For Sun CC, add settings needed for proper
	  definition of ACE_nothrow. Thanks to Mark Wilson
	  <mwil at lle dot rochester dot edu> for reporting this.

	* THANKS: Added Mark Wilson to the Hall of Fame.

Fri Mar 11 18:05:29 2005  Steve Huston  <shuston@riverace.com>
